--- a/TechnicCraft/TechnicCraft.vcxproj
+++ b/TechnicCraft/TechnicCraft.vcxproj
@@ -164,6 +164,37 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\main.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\EGL\egl.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\EGL\eglext.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\EGL\eglplatform.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\glad\glad.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES2\gl2.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES2\gl2ext.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES2\gl2platform.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES3\gl3.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES3\gl31.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES3\gl32.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES3\gl3platform.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES\1.0\gl.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES\egl.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES\gl.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES\glext.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLES\glplatform.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLFW\glfw3.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLFW\glfw3native.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLSC2\gl2platform.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLSC2\glsc2.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLSC2\glsc2ext.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLSC\1.0.1\gl.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GLSC\1.0\gl.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GL\glcorearb.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GL\glext.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GL\glxext.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GL\wgl.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\GL\wglext.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows-static\x64-windows-static\include\KHR\khrplatform.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows\x64-windows\include\GLFW\glfw3.h" />
+    <ClInclude Include="vcpkg_installed\x64-windows\x64-windows\include\GLFW\glfw3native.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Engine\Engine.vcxproj">
