--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -284,6 +284,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\glfw\inputHandling\KeyHandler.cpp" />
+    <ClCompile Include="src\glfw\Window.cpp" />
     <ClCompile Include="src\glfw\windowHandling\windowProcessing.cpp" />
     <ClCompile Include="src\openGlRender\openGlCamera\Camera.cpp" />
     <ClCompile Include="src\openGlRender\openGlCamera\CameraController.cpp" />
@@ -298,7 +299,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\T3D\glfw\inputHandling\KeyHandler.h" />
-    <ClInclude Include="include\T3D\glfw\windowHandling\Window.h" />
+    <ClInclude Include="include\T3D\glfw\Window.h" />
     <ClInclude Include="include\T3D\glfw\windowHandling\WindowProcessing.h" />
     <ClInclude Include="include\T3D\openGlRender\openGlCamera\Camera.h" />
     <ClInclude Include="include\T3D\openGlRender\openGlCamera\CameraController.h" />
